@@ -1,3 +1,8 @@
+2008-09-06  Michael Natterer  <mitch@gimp.org>
+
+	* app/gegl/gimpoperationhuesaturation.c
+	(gimp_operation_hue_saturation_process): don't use // for comments.
+
 2008-09-06  Martin Nordholts  <martinn@svn.gnome.org>
 
 	* app/gegl/gimpoperationhuesaturation.c
